# qdp

./: Cargo.toml  README.md  WARN.md  ipqdp.md  qdp-client.md  qdp-coord.md  qdp-registration.md  qdp.md
crates/qdp/: Cargo.toml
crates/qdp/src/: lib.rs
