[package]
name = "qdp"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.0", default-features = false }
zerocopy = { version = "0.8.33", default-features = false, features = ["derive"] }
ed25519-dalek = { version = "2", default-features = false }

[features]
alloc = []
c-interop = []
std = ["alloc"]
